KSENROLL-14183: fixing alignment of the credits column in Registration to be to the right.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74263 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchResults.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchResults.less
@@ -47,6 +47,14 @@
 
 .kscr-Search-results-cell {
   padding: 1rem @leftRightPadding;
+
+  &--Credits {
+    text-align: right;
+  }
+}
+
+.kscr-Search-cell--Credits{
+
 }
 
 .kscr-Search-results--selected {
